--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                Haskyph
 version:             0.1.0.0
-github:              "githubuser/Haskyph"
+github:              "WolfgangTS/Haskyph"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2018 Author name here"
+author:              "Noe Nogueira Martins"
+maintainer:          "lobo.noe@gmail.com"
+copyright:           "2018 Noe Nogueira Martins"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on Github at <https://github.com/githubuser/Haskyph#readme>
+description:         Please see the README on Github at <https://github.com/WolfgangTS/Haskyph#readme>
 
 dependencies:
 - base >= 4.7 && < 5
